hphp/hack/test/typecheck/references/strict_reference2.php.exp
File "strict_reference2.php", line 4, characters 14-16:
Arrays cannot contain references. (Typing[4225])
